--- a/gisModule/templates/gisModule/account.html
+++ b/gisModule/templates/gisModule/account.html
@@ -90,12 +90,17 @@
                                     <div class="panel-body">
                                         <div class="panel-heading">
                                             <h4 class="panel-title">
-                                                <a href="">General Settings</a>
+                                                <a id="route_default_settings_button" href="#">Default Settings</a>
                                             </h4>
                                         </div>
                                         <div class="panel-heading">
                                             <h4 class="panel-title">
                                                 <a href="">Algorithm Settings</a>
+                                            </h4>
+                                        </div>
+                                        <div class="panel-heading">
+                                            <h4 class="panel-title">
+                                                <a id="address_book_button" href="#">Address Book</a>
                                             </h4>
                                         </div>
                                     </div>
@@ -290,8 +295,54 @@
                                 <br>
                                 <div id="list_list"></div>
                             </div><!--/Shopping List Management -->
+
+                            <div id="route_defaults_settings" class="replay-box" hidden> <!--Route Default Settings -->
+                                <form>
+                                    <input name="opt_money" id="opt_money" type="checkbox" checked>
+                                    Optimize Money Cost
+                                    <input name="opt_dist" id="opt_dist" type="checkbox" checked>
+                                    <label>Optimize Distance</label>
+                                    <input name="opt_time" id="opt_time" type="checkbox" checked>
+                                    <label>Optimize Time Spent</label>
+                                    <label>Start Point:</label>
+                                    <select name="start_point" id="default_start_point"></select>
+                                    <label>End Point:</label>
+                                    <select name="end_point" id="default_end_point"></select>
+                                    <label>Route Area Tolerance:</label>
+                                    <input name="tolerance" id="default_tolerance" placeholder="in kilometers..." type="text">
+                                    <a id="save_route_defaults_button" class="btn btn-default update" href="#">Save</a>
+                                </form>
+                            </div><!--/Route Default Settings -->
+
+                            <div id="address_book" class="replay-box" hidden> <!--Route Default Settings -->
+                                <h2>Create New Address Entry</h2>
+                                <div id="add_address_form" class="row">
+                                    <form id="new_address_form" method="post">
+                                        <div class="col-sm-3">
+                                            <div class="blank-arrow">
+                                                <label>Address Name</label>
+                                            </div>
+                                            <input name="address_name" type="text" placeholder="address name...">
+                                        </div>
+                                        <div class="col-sm-6">
+                                            <div class="blank-arrow">
+                                                <label>Address</label>
+                                            </div>
+                                            <input name="address" type="text" placeholder="address...">
+                                        </div>
+                                        <div class="col-sm-1">
+                                            <button type="submit" id="create_address_button" class="btn btn-primary">
+                                                Create New Address
+                                            </button>
+                                        </div>
+                                    </form>
+                                </div>
+                                <br>
+                                <h2>Saved Addresses</h2>
+                                <div id="saved_addresses"></div>
+                            </div>
                         </div>
-                    </div><!--user_panel-->
+                    </div><!--/user_panel-->
                 </div>
             </div>
         </div>
