--- a/gisModule/templates/gisModule/cart.html
+++ b/gisModule/templates/gisModule/cart.html
@@ -50,66 +50,51 @@
                     <div class="chose_area">
                         <ul class="user_option">
                             <li>
-                                <input type="checkbox">
-                                <label>Use Coupon Code</label>
+                                <input type="checkbox" checked>
+                                <label>Optimize Money Cost</label>
                             </li>
                             <li>
-                                <input type="checkbox">
-                                <label>Use Gift Voucher</label>
+                                <input type="checkbox" checked>
+                                <label>Optimize Distance</label>
                             </li>
                             <li>
-                                <input type="checkbox">
-                                <label>Estimate Shipping & Taxes</label>
+                                <input type="checkbox" checked>
+                                <label>Optimize Time Spent</label>
                             </li>
                         </ul>
                         <ul class="user_info">
                             <li class="single_field">
-                                <label>Country:</label>
+                                <label>Start Point:</label>
                                 <select>
-                                    <option>United States</option>
-                                    <option>Bangladesh</option>
-                                    <option>UK</option>
-                                    <option>India</option>
-                                    <option>Pakistan</option>
-                                    <option>Ucrane</option>
-                                    <option>Canada</option>
-                                    <option>Dubai</option>
+                                    <option>Turkey</option>
                                 </select>
 
                             </li>
                             <li class="single_field">
-                                <label>Region / State:</label>
+                                <label>End Point:</label>
                                 <select>
-                                    <option>Select</option>
-                                    <option>Dhaka</option>
-                                    <option>London</option>
-                                    <option>Dillih</option>
-                                    <option>Lahore</option>
-                                    <option>Alaska</option>
-                                    <option>Canada</option>
-                                    <option>Dubai</option>
+                                    <option>Ankara</option>
                                 </select>
 
                             </li>
                             <li class="single_field zip-field">
-                                <label>Zip Code:</label>
-                                <input type="text">
+                                <label>Route Area Tolerance:</label>
+                                <input placeholder="in kilometers..." type="text">
                             </li>
                         </ul>
-                        <a class="btn btn-default update" href="">Get Quotes</a>
-                        <a class="btn btn-default check_out" href="">Continue</a>
+                        <a class="btn btn-default update" href="">Save As Default</a>
+                        <a class="btn btn-default check_out" href="">Apply</a>
                     </div>
                 </div>
                 <div class="col-sm-6">
                     <div class="total_area">
                         <ul>
-                            <li>Cart Sub Total <span>$59</span></li>
-                            <li>Eco Tax <span>$2</span></li>
-                            <li>Shipping Cost <span>Free</span></li>
-                            <li>Total <span>$61</span></li>
+                            <li>Cart Average Total <span>$59</span></li>
+                            <li>Fuel Cost <span>$2</span></li>
+                            <li>Total Distance <span>0 km</span></li>
+                            <br><br>
                         </ul>
-                        <a class="btn btn-default update" href="">Update</a>
-                        <a class="btn btn-default check_out" href="">Check Out</a>
+                        <a class="btn btn-default check_out" href="">Calculate Possible Routes</a>
                     </div>
                 </div>
             </div>
